added hover contacts

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -23,8 +23,8 @@
             <p class="footer__title">Пн-Пт</p>
             <p class="footer__descr">с 9:00 до 17:00</p>
             <p class="footer__title">Контакты</p>
-            <a class="footer__phone footer__link" href="tel:+375292577007"> +375 (29) 257-70-07 </a>
-            <a class="footer__mail footer__link" href="mailto:3577007by@gmail.com">3577007by@gmail.com</a>
+            <a class="footer__phone footer__phone_hover footer__link" href="tel:+375292577007"> +375 (29) 257-70-07 </a>
+            <a class="footer__mail footer__mail_hover footer__link" href="mailto:3577007by@gmail.com">3577007by@gmail.com</a>
             <ul class="footer__list-icon">
                 <li class="footer__item">
                     <a href="#" class="footer__link">
