fixed scripts accordeon swiper clients

--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -1,8 +1,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js" async></script>
-    <script src="https://unpkg.com/accordion-js@3.3.4/dist/accordion.min.js" async></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js" defer></script>
+    <script src="https://unpkg.com/accordion-js@3.3.4/dist/accordion.min.js" deferc></script>
     <link href="https://unpkg.com/accordion-js@3.3.4/dist/accordion.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" rel="stylesheet">
     <link href="fonts/Raleway-Bold.ttf" rel="preload" as="font" type="font/ttf" crossorigin>
