--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -6,12 +6,12 @@
                 <button class="burger__btn">
                 </button>
                 <nav class="burger__nav">
-                    <ul class="burger__list">
+                    <ul class="burger__list hidden">
                         <li class="burger__item header__item header__item-trigger">
                             <a class="burger__link header__link" href="#">Все услуги</a>
                         </li>
                         <li class="burger__item header__item header__item-trigger">
-                            <a class="burger__link header__link" href="#">Продвижение сайтов (SEO)</a>
+                            <a class="burger__link header__link header__link_arrow-right" href="#">Продвижение сайтов (SEO)</a>
                             <ul class="header__dropdown-menu">
                                 <li class="burger__title-menu">
                                     <button class="burger__btn-back">
@@ -44,7 +44,7 @@
                             </ul>
                         </li>
                         <li class="burger__item header__item header__item-trigger">
-                            <a class="burger__link header__link" href="#">Контексная реклама</a>
+                            <a class="burger__link header__link header__link_arrow-right" href="#">Контексная реклама</a>
                             <ul class="header__dropdown-menu">
                                 <li class="burger__title-menu">
                                     <button class="burger__btn-back">
@@ -66,9 +66,27 @@
                                 <li class="header__drop-item"><a class="header__link"
                                         href="/kontekstnaja-reklama/kontekstnaja-reklama-fiksirovannaja-oplata">Контекстная
                                         реклама с фиксированной оплатой</a></li>
-                                <li class="header__drop-item"><a class="header__link"
-                                        href="/kontekstnaja-reklama/yandex-direct"
-                                        class="dropdown-toggle link-menu">Реклама в Яндекс.Директ</a>
+                                <li class="header__drop-item">
+                                    <a class="header__link header__link_arrow-right burger__link-last-trigger"
+                                        href="#"
+                                        >Реклама в Яндекс.Директ
+                                    </a>
+                                    <ul class="burger__list-last header__dropdown-menu">
+                                        <li class="burger__title-menu">
+                                            <button class="burger__btn-back">
+                                                <svg class="header__link-img" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg">
+                                                    <use xlink:href="./images/sprite.svg#btn-back">
+                                                </svg>
+                                            </button>
+                                            <button class="burger__btn-close">
+                                                <svg class="header__link-img" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg">
+                                                    <use xlink:href="./images/sprite.svg#btn-close">
+                                                </svg>
+                                            </button>
+                                            Реклама в Яндекс.Директ
+                                        </li>       
+                                        <li class="burger__item-last">Настройка контекстной рекламы в Яндекс.Директ</li>
+                                    </ul>
                                 </li>
                             </ul>
 
@@ -116,8 +134,8 @@
                     3577007by@gmail.com
                 </a>
                 <div class="header__lang">
-                    <span class="header__lang-name">RU</span>
-                    <svg class="header__lang-img" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg">
+                    <span class="header__lang-name header__link_arrow">RU</span>
+                    <svg class="header__lang-img header__link_arrow" viewBox="0 0 30 30" xmlns="http://www.w3.org/2000/svg">
                         <use xlink:href="./images/sprite.svg#ru-flag">
                     </svg>
                 </div>
@@ -130,7 +148,7 @@
                         <a class="header__link" href="#">Все услуги</a>
                     </li>
                     <li class="header__item header__item-trigger">
-                        <a class="header__link" href="#">Продвижение сайтов (SEO)</a>
+                        <a class="header__link header__link_arrow" href="#">Продвижение сайтов (SEO)</a>
                         <ul class="header__dropdown-menu">
                             <li class="header__drop-item"><a class="header__link"
                                     href="/prodvizhenie-sajtov/prodvizhenie-po-pozicijam">Продвижение по
@@ -146,11 +164,12 @@
                                     сайтов в Google</a></li>
                             <li class="header__drop-item"><a class="header__link"
                                     href="/prodvizhenie-sajtov/prodvizhenie-sajtov-yandex">Продвижение
-                                    сайтов в Яндекс</a></li>
+                                    сайтов в Яндекс</a>
+                                </li>
                         </ul>
                     </li>
                     <li class="header__item header__item-trigger">
-                        <a class="header__link headre__link_active" href="#">Контексная реклама</a>
+                        <a class="header__link headre__link_active header__link_arrow" href="#">Контексная реклама</a>
                         <ul class="header__dropdown-menu">
                             <li class="header__drop-item"><a class="header__link"
                                     href="/kontekstnaja-reklama/kontekstnaja-reklama-oplata-za-lidy">Контекстная реклама
@@ -158,14 +177,17 @@
                             <li class="header__drop-item"><a class="header__link"
                                     href="/kontekstnaja-reklama/kontekstnaja-reklama-fiksirovannaja-oplata">Контекстная
                                     реклама с фиксированной оплатой</a></li>
-                            <li class="header__drop-item"><a class="header__link"
-                                    href="/kontekstnaja-reklama/yandex-direct" class="dropdown-toggle link-menu">Реклама
+                            <li class="header__drop-item"><a class="header__link header__link_last-trigger header__link_arrow-right"
+                                    href="/kontekstnaja-reklama/yandex-direct">Реклама
                                     в Яндекс.Директ</a>
+                                    <ul class="header__dropdown-menu header__dropdown-menu-include-last">
+                                        <li class="header__drop-item"><a class="header__link"
+                                                href="/kontekstnaja-reklama/yandex-direct/nastrojka-yandex-direct">Настройка контекстной рекламы в Яндекс.Директ</a></li>
                             </li>
                         </ul>
                     </li>
                     <li class="header__item header__item-trigger">
-                        <a class="header__link" href="#">Создание сайтов</a>
+                        <a class="header__link header__link_arrow" href="#">Создание сайтов</a>
                         <div class="header__dropdown-menu header__dropdown-menu-flex">
                             <ul class="header__dropdown-menu-include">
                                 <li class="header__drop-item"><a class="header__link"
@@ -201,7 +223,7 @@
                                         href="/sozdanie-sajtov/razrabotka-sajtov-blogov">Разработка сайтов
                                         блогов</a></li>
                                 <li class="header__drop-item header__drop-include">
-                                    <a href="#" class="header__link">Разработка сайтов с CMS</a>
+                                    <a href="#" class="header__link header__link_arrow-right">Разработка сайтов с CMS</a>
                                     <ul class="header__dropdown-menu header__dropdown-menu-include-last">
                                         <li class="header__drop-item"><a class="header__link"
                                                 href="/sozdanie-sajtov/cms/razrabotka-wordpress">Разработка
@@ -224,12 +246,12 @@
                         <a class="header__link" href="#">Медийнная реклама</a>
                     </li>
                     <li class="header__item header__item-trigger">
-                        <a class="header__link" href="#">Разработка дизайна</a>
+                        <a class="header__link header__link_arrow" href="#">Разработка дизайна</a>
                         <div class="header__dropdown-menu header__dropdown-menu-flex">
                             <ul class="header__dropdown-menu-include">
-                                <li class="header__item"><a class="header__link" href="/dizajn/web-dizajn">Разработка
+                                <li class="header__item"><a class="header__link header__link_arrow-right header__link_last-trigger" href="/dizajn/web-dizajn">Разработка
                                         веб-дизайна</a>
-                                    <ul class="header__dropdown-menu header__dropdowm-menu-include-last">
+                                    <ul class="header__dropdown-menu header__dropdown-menu-include-last">
                                         <li class="header__item"><a class="header__link"
                                                 href="/dizajn/web-dizajn/redizajn-sajtov">Редизайн сайта</a>
                                         </li>
@@ -251,9 +273,9 @@
                                 <li class="header__item"><a class="header__link"
                                         href="/dizajn/dizajn-vizitki">Разработка
                                         дизайна визиток</a></li>
-                                <li class="header__item"><a class="header__link"
+                                <li class="header__item"><a class="header__link header__link_arrow-right header__link_last-trigger"
                                         href="/dizajn/dizajn-suvenirnoj-produkcii">Дизайн сувенирной продукции</a>
-                                    <ul class="header__dropdown-menu header__dropdowm-menu-include-last">
+                                    <ul class="header__dropdown-menu header__dropdown-menu-include-last">
                                         <li class="header__item"><a class="header__link"
                                                 href="/dizajn/dizajn-suvenirnoj-produkcii/dizajn-ruchek">Дизайн
                                                 шариковых
@@ -308,7 +330,7 @@
                         <a class="header__link" href="#">Продвижение в соц сетях (SMM)</a>
                     </li>
                     <li class="header__item header__item-trigger">
-                        <a class="header__link" href="#">О компании</a>
+                        <a class="header__link header__link_arrow" href="#">О компании</a>
                         <ul class="header__dropdown-menu">
                             <li class="header__item"><a class="header__link"
                                     href="https://vtop-3.ru/dogovor/dogovor-vtop3.pdf" target="_blank"
