modal window added, fixed burger-menu

--- a/src/partials/cases.html
+++ b/src/partials/cases.html
@@ -65,7 +65,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!-- <a href="#" class="cases__link btn">Хочу также!</a> -->
+                                <!-- <a href="#" class="cases__link btn btn-show-modal">Хочу также!</a> -->
                             </div>
                             <div class="cases__content" data-tab-content="2">
                                 <div class="cases__chart"></div>
@@ -140,7 +140,7 @@
                                         </div>
                                     </li>
                                 </ul>
-                                <!-- <a href="#" class="cases__link btn">Хочу также!</a> -->
+                                <!-- <a href="#" class="cases__link btn btn-show-modal">Хочу также!</a> -->
                             </div>
                             <div class="cases__content" data-tab-content="3">
                                 <ul class="cases__list cases__list_3">
@@ -225,7 +225,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="#" class="cases__link btn">Хочу также!</a>
+                            <a href="#" class="cases__link btn btn-show-modal">Хочу также!</a>
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -286,7 +286,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!-- <a href="#" class="cases__link btn">Хочу также!</a> -->
+                                <!-- <a href="#" class="cases__link btn btn-show-modal">Хочу также!</a> -->
                             </div>
                             <div class="cases__content" data-tab-content="2">
                                 <div class="cases__chart"></div>
@@ -361,7 +361,7 @@
                                         </div>
                                     </li>
                                 </ul>
-                                <!-- <a href="#" class="cases__link btn">Хочу также!</a> -->
+                                <!-- <a href="#" class="cases__link btn btn-show-modal">Хочу также!</a> -->
                             </div>
                             <div class="cases__content" data-tab-content="3">
                                 <ul class="cases__list cases__list_3">
@@ -446,7 +446,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="#" class="cases__link btn">Хочу также!</a>
+                            <a href="#" class="cases__link btn btn-show-modal">Хочу также!</a>
                         </div>
                     </div>
                     <div class="swiper-slide">
@@ -507,7 +507,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <!-- <a href="#" class="cases__link btn">Хочу также!</a> -->
+                                <!-- <a href="#" class="cases__link btn btn-show-modal">Хочу также!</a> -->
                             </div>
                             <div class="cases__content" data-tab-content="2">
                                 <div class="cases__chart"></div>
@@ -582,7 +582,7 @@
                                         </div>
                                     </li>
                                 </ul>
-                                <!-- <a href="#" class="cases__link btn">Хочу также!</a> -->
+                                <!-- <a href="#" class="cases__link btn btn-show-modal">Хочу также!</a> -->
                             </div>
                             <div class="cases__content" data-tab-content="3">
                                 <ul class="cases__list cases__list_3">
@@ -667,7 +667,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="#" class="cases__link btn">Хочу также!</a>
+                            <a href="#" class="cases__link btn btn-show-modal">Хочу также!</a>
                         </div>
                     </div>
                 </div>
