--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,7 +7,7 @@
                         <h2 class="hero__title">КОНТЕКСТНАЯ РЕКЛАМА</h2>
                         <h3 class="hero__subtitle">Бонус 300 ₽ на рекламный кабинет Яндекса и 300 $ на Google!*</h3>
                         <h3 class="hero__subtitle hero__subtitle_last">*для новых клиентов</h3>
-                        <button class="hero__btn btn">Заказать рекламу</button>
+                        <button class="hero__btn btn-show-modal btn">Заказать рекламу</button>
                         <ul class="hero__list">
                             <li class="hero__item">Сертифицированные специалисты</li>
                             <li class="hero__item">Быстро настраиваем — до 10 дней</li>
@@ -27,7 +27,7 @@
                             ИНТЕРНЕТ-САЙТОВ</h2>
                         <h3 class="hero__subtitle">Бонус 300 ₽ на рекламный кабинет Яндекса и 300 $ на Google!*</h3>
                         <h3 class="hero__subtitle hero__subtitle_last">*для новых клиентов</h3>
-                        <button class="hero__btn btn">Заказать рекламу</button>
+                        <button class="hero__btn btn-show-modal btn">Заказать рекламу</button>
                         <ul class="hero__list">
                             <li class="hero__item">Сертифицированные специалисты</li>
                             <li class="hero__item">Быстро настраиваем — до 10 дней</li>
