--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -159,6 +159,6 @@
         <p class="reviews__descr">Для нас <span>хороший сайт</span> - тот, который принял заказчик. Мы знаем, что вы,
             как никто другой, заинтересованы в успешном результате и хотите, чтобы Ваша компания имела свое собственное
             запоминающееся лицо.</p>
-        <button class="reviews__btn btn">Разработать сайт</button>
+        <button class="reviews__btn btn btn-show-modal">Разработать сайт</button>
     </div>
 </section>
