--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -228,6 +228,7 @@ img {
     @include btnReset;
     width: 30px;
     height: 30px;
+    margin-right: 10px;
     svg {
       width: 100%;
     }
@@ -353,6 +354,7 @@ img {
       background-image: url(./images/svg/border-burger.svg);
       background-repeat: no-repeat;
       background-position: bottom left;
+      background-size: contain;
   
     }
     &__list {
@@ -396,7 +398,7 @@ img {
       position: absolute;
       padding: 20px;
       border-radius: 20px 20px 20px 20px;
-      max-width: 250px;
+      max-width: 300px;
       left: calc(100% - 30px);
       background-color: $color-4D3F75;
       &:hover {
@@ -2131,28 +2133,15 @@ img {
 
 .hidden {
   @include hidden;
+  background: transparent;
+  background-image: none;
 }
 
 .visible {
   @include visible;
 }
-
 .none {
   display: none;
-}
-.flip {
-  font-size: 0;
-  pointer-events: none;
-  user-select: none;
-  a {
-    pointer-events: none;
-    color: transparent;
-    text-shadow: none;
-    user-select: none;
-    &::after {
-      display: none;
-    }
-  }
 }
 .header__dropdown-menu.visible {
   transition: all 0.3s ease-in;
@@ -2169,5 +2158,53 @@ img {
   a {
     pointer-events: painted;
     color: $color-FFFFFF;
+  }
+}
+.header__dropdown-menu.visible.hidden {
+  background: transparent;
+  .header__drop-item.flip > .header__link {
+    pointer-events: none;
+    color: transparent;
+    border: transparent;
+    &::after {
+      display: none;
+    }
+  }
+}
+
+.flip {
+  font-size: 0;
+  pointer-events: none;
+  user-select: none;
+ & > a {
+    // display: none;
+    pointer-events: none;
+    color: transparent;
+    text-shadow: none;
+    user-select: none;
+    &:hover {
+      pointer-events: none;
+      color: transparent;
+      text-shadow: none;
+      user-select: none;
+      border-color: transparent;
+    }
+    &::after {
+      display: none;
+    }
+  }
+}
+
+.callback__modal {
+  .callback__block_2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 20px;
+    padding: 50px;
+    .callbacl__label {
+      font-size: 14px;
+    }
+    // background-color: linear-gradient(61deg, #56295A 0%, #5C6BC0 100%);
   }
 }
